# tshiritsort-9000

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html
src/: lib.rs  sortation.rs
