[package]
name = "tshirtsort"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
lazy_static = "1.3.0"
regex = { version = "1.3.1", default-features = false, features = [ "std" ] }
web-sys = { version = "0.3.25", features = ["Document", "Element", "Window", "HtmlCollection", "Node", "HtmlElement"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
rand = "0.7.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
codegen-units = 1
lto = true
